# frontier_exploration

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  package.xml
frontier_exploration/: .gitignore  CMakeLists.txt
frontier_exploration/config/: nav2.yaml
frontier_exploration/frontier_exploration/: frontier_exploration_node.py  manual_nav_to_goal.py  robot_navigator.py  slim_detect.py
frontier_exploration/include/frontier_exploration/: classical_frontier_detector.hpp  exploration.hpp  frontier_utils.hpp
frontier_exploration/launch/: classical_exploration.launch.py  custom_nav_bringup.launch.py  exploration.launch.py  learned_exploration_launch.py  lite_turtlebot_full_stack.launch.py  tugbot_bridge.launch.py  turtlebot_full_stack.launch.py
frontier_exploration/scripts/: frontier_exploration_node.py  learned_frontier_detector.py
frontier_exploration/src/: classical_frontier_detector.cpp  exploration.cpp  frontier_utils.cpp  training_data_collector.cpp
frontier_interfaces/: CMakeLists.txt  package.xml
frontier_interfaces/srv/: FrontierGoal.srv
include/frontier_exploration/: exploration.hpp  frontier_utils.hpp
launch/: exploration.launch.py  lite_turtlebot_full_stack.launch.py  tugbot_bringup.launch.py  turtlebot_full_stack.launch.py
learned_frontier_detector/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
learned_frontier_detector/learned_frontier_detector/: detector.py  export.py  frontier_detector.py  learned_frontier_detector.py  slim_detect.py
learned_frontier_detector/learned_frontier_detector/models/: common.py  experimental.py
learned_frontier_detector/learned_frontier_detector/utils/: augmentations.py  dataloaders.py  general.py  metrics.py  plots.py  torch_utils.py
learned_frontier_detector/training/: yolov5-custom-training-256.ipynb
learned_frontier_detector/weights/: yolov5n_frontier_256.pt  yolov5n_frontier_64.pt
learning_based_frontier_detection/: README.md  yolov5-custom-training-128.ipynb  yolov5-custom-training-64.ipynb
scripts/: manual_nav_to_goal.py  nav_to_goal.py
src/: exploration.cpp  frontier_utils.cpp  training_data_collector.cpp
